--- a/procedimientos/GestMatricula.html
+++ b/procedimientos/GestMatricula.html
@@ -86,15 +86,15 @@
                 <div class="col-12 col-md-3 my-4">
                   <div class="nav flex-column nav-pills " id="v-pills-tab" role="tablist" aria-orientation="vertical">
                     <a class="nav-link style-mv-color my-1 active show" id="v-pills-gm-uno-tab" data-toggle="pill" href="#v-pills-gm-uno" role="tab" aria-controls="v-pills-gm-uno" aria-selected="true">Regularización de expedientes de ingresantes</a>
-                    <a class="nav-link style-mv-color my-1" id="v-pills-gm-dos-tab" data-toggle="pill" href="#v-pills-gm-dos" role="tab" aria-controls="v-pills-gm-dos" aria-selected="false">Reactualización de matricula</a>
-                    <a class="nav-link style-mv-color my-1" id="v-pills-gm-tres-tab" data-toggle="pill" href="#v-pills-gm-tres" role="tab" aria-controls="v-pills-gm-tres" aria-selected="false">Reserva de matricula</a>
-                    <a class="nav-link style-mv-color my-1" id="v-pills-gm-cuatro-tab" data-toggle="pill" href="#v-pills-gm-cuatro" role="tab" aria-controls="v-pills-gm-cuatro" aria-selected="false">Matricula regular</a>
-                    <a class="nav-link style-mv-color my-1" id="v-pills-gm-cinco-tab" data-toggle="pill" href="#v-pills-gm-cinco" role="tab" aria-controls="v-pills-gm-cinco" aria-selected="false">Matricula por excepción</a>
-                    <a class="nav-link style-mv-color my-1" id="v-pills-gm-seis-tab" data-toggle="pill" href="#v-pills-gm-seis" role="tab" aria-controls="v-pills-gm-seis" aria-selected="false">Retiro de matricula</a>
-                    <a class="nav-link style-mv-color my-1" id="v-pills-gm-siete-tab" data-toggle="pill" href="#v-pills-gm-siete" role="tab" aria-controls="v-pills-gm-siete" aria-selected="false">Anulación de matricula</a>
+                    <a class="nav-link style-mv-color my-1" id="v-pills-gm-dos-tab" data-toggle="pill" href="#v-pills-gm-dos" role="tab" aria-controls="v-pills-gm-dos" aria-selected="false">Reactualización de matrícula</a>
+                    <a class="nav-link style-mv-color my-1" id="v-pills-gm-tres-tab" data-toggle="pill" href="#v-pills-gm-tres" role="tab" aria-controls="v-pills-gm-tres" aria-selected="false">Reserva de matrícula</a>
+                    <a class="nav-link style-mv-color my-1" id="v-pills-gm-cuatro-tab" data-toggle="pill" href="#v-pills-gm-cuatro" role="tab" aria-controls="v-pills-gm-cuatro" aria-selected="false">Matrícula regular</a>
+                    <a class="nav-link style-mv-color my-1" id="v-pills-gm-cinco-tab" data-toggle="pill" href="#v-pills-gm-cinco" role="tab" aria-controls="v-pills-gm-cinco" aria-selected="false">Matrícula por excepción</a>
+                    <a class="nav-link style-mv-color my-1" id="v-pills-gm-seis-tab" data-toggle="pill" href="#v-pills-gm-seis" role="tab" aria-controls="v-pills-gm-seis" aria-selected="false">Retiro de matrícula</a>
+                    <a class="nav-link style-mv-color my-1" id="v-pills-gm-siete-tab" data-toggle="pill" href="#v-pills-gm-siete" role="tab" aria-controls="v-pills-gm-siete" aria-selected="false">Anulación de matrícula</a>
                     <a class="nav-link style-mv-color my-1" id="v-pills-gm-ocho-tab" data-toggle="pill" href="#v-pills-gm-ocho" role="tab" aria-controls="v-pills-gm-ocho" aria-selected="false">Convalidaciones</a>
                     <a class="nav-link style-mv-color my-1" id="v-pills-gm-nueve-tab" data-toggle="pill" href="#v-pills-gm-nueve" role="tab" aria-controls="v-pills-gm-nueve" aria-selected="false">Evaluación por jurado</a>
-                    <a class="nav-link style-mv-color my-1" id="v-pills-gm-diez-tab" data-toggle="pill" href="#v-pills-gm-diez" role="tab" aria-controls="v-pills-gm-diez" aria-selected="false">Consolidado de matricula</a>
+                    <a class="nav-link style-mv-color my-1" id="v-pills-gm-diez-tab" data-toggle="pill" href="#v-pills-gm-diez" role="tab" aria-controls="v-pills-gm-diez" aria-selected="false">Consolidado de matrícula</a>
                     <a class="nav-link style-mv-color my-1" id="v-pills-gm-once-tab" data-toggle="pill" href="#v-pills-gm-once" role="tab" aria-controls="v-pills-gm-once" aria-selected="false">Retiro excepcional</a>
                     <a class="nav-link style-mv-color my-1" id="v-pills-gm-doce-tab" data-toggle="pill" href="#v-pills-gm-doce" role="tab" aria-controls="v-pills-gm-doce" aria-selected="false">Carne universitario</a>
                 </div>
@@ -139,7 +139,7 @@
                       <!-- SEGUNDO CONTENEDOR -->
                       <div class="tab-pane fade" id="v-pills-gm-dos" role="tabpanel" aria-labelledby="v-pills-gm-dos-tab">
                         <div class="row my-2 style-pill">
-                          <h4 class="subtitulo">Reactualización de matricula</h4>
+                          <h4 class="subtitulo">Reactualización de matrícula</h4>
                         </div>
                         <div class="row my-2 style-pill">
                           <div class="col-12 col-lg-8 img-regl">
@@ -196,7 +196,7 @@
                       <!-- CUARTO CONTENEDOR -->
                       <div class="tab-pane fade" id="v-pills-gm-cuatro" role="tabpanel" aria-labelledby="v-pills-gm-cuatro-tab">
                         <div class="row my-2 style-pill">
-                          <h4 class="subtitulo">Matricula regular</h4> 
+                          <h4 class="subtitulo">Matrícula regular</h4> 
                         </div>
                         <div class="row my-2 style-pill">
                           <div class="col-12 col-lg-8 img-regl">
@@ -254,7 +254,7 @@
                       <!-- SEXTO CONTENEDOR -->
                       <div class="tab-pane fade" id="v-pills-gm-seis" role="tabpanel" aria-labelledby="v-pills-gm-seis-tab">
                         <div class="row my-2 style-pill">
-                          <h4 class="subtitulo">Retiro de matricula</h4> 
+                          <h4 class="subtitulo">Retiro de matrícula</h4> 
                         </div>
                         <div class="row my-2 style-pill">
                           <div class="col-12 col-lg-8 img-regl">
@@ -283,7 +283,7 @@
                       <!-- SEPTIMO -->
                       <div class="tab-pane fade" id="v-pills-gm-siete" role="tabpanel" aria-labelledby="v-pills-gm-siete-tab">
                         <div class="row my-2 style-pill">
-                          <h4 class="subtitulo">Anulación de matricula</h4> 
+                          <h4 class="subtitulo">Anulación de matrícula</h4> 
                         </div>
                         <div class="row my-2 style-pill">
                           <div class="col-12 col-lg-8 img-regl">
@@ -323,16 +323,23 @@
                           <div class="col-12 col-lg-4 img-regl">
                             <div class="card" style="width: 18rem;">
                               <div class="card-body">
-                                <h5>REGLAMENTOS</h5>
-                                <p>Documento.pdf</p>
-                                <a href="#" class="card-link">Ver/Descargar</a>
+                                <h5>FORMATO</h5>
+                                <p>SOLICITUD DE CONVALIDACIONES</p>
+                                <a href="../formatos/Formato 1 Sol Convalidaciones.pdf" class="card-link" target="_blank">Ver/Descargar</a>
                               </div>
                             </div>
                             <div class="card" style="width: 18rem;">
                               <div class="card-body">
-                                <h5>REGLAMENTOS</h5>
-                                <p>Documento.pdf</p>
-                                <a href="#" class="card-link">Ver/Descargar</a>
+                                <h5>FORMATO</h5>
+                                <p>RESOLUCIÓN DE CONVALIDACIONES</p>
+                                <a href="../formatos/Formato 2 Res Convalidaciones.pdf" class="card-link" target="_blank">Ver/Descargar</a>
+                              </div>
+                            </div>
+                            <div class="card" style="width: 18rem;">
+                              <div class="card-body">
+                                <h5>FORMATO</h5>
+                                <p>EVALUACIÓN DE CONVALIDACIONES</p>
+                                <a href="../formatos/Formato 3 Eval Convalidaciones.pdf" class="card-link" target="_blank">Ver/Descargar</a>
                               </div>
                             </div>
                           </div>
@@ -463,16 +470,15 @@
         </div>
         <!-- FOOTER -->
         <div class="row footer style-secondfooter">
-            <div class="col-md-6 text-left">
-                Universidad Nacional de San Agustin de Arequipa <br>
-                Calle Santa Catalina Nro. 117. Cercado - Arequipa<br>
-                Telf. 51-54-237808 - Email: rectorado@unsa.edu.pe
-            </div>
-            <div class="col-md-6 text-right">
-                Dirección Universitaria de Formación Académica<br>
-                Email: dufa@unsa.edu.pe<br>
-                 Telf. 51-54-282269
-            </div>
+          <div class="col-md-6 text-left">
+            Universidad Nacional de San Agustin de Arequipa <br>
+            Calle Universidad 107 Cercado - Arequipa<br>
+          </div>
+          <div class="col-md-6 text-right">
+            Dirección Universitaria de Formación Académica<br>
+            Email: dufa@unsa.edu.pe<br>
+            Telf.(054) 391911 
+          </div>
         </div>
         <!-- CREDITOS -->
         <div class="row">
