--- a/procedimientos/consultas.html
+++ b/procedimientos/consultas.html
@@ -210,13 +210,13 @@
       <div class="row footer ">
         <div class="col-md-6 text-left style-secondfooter">
             Universidad Nacional de San Agustin de Arequipa <br>
-            Calle Santa Catalina Nro. 117. Cercado - Arequipa<br>
-            Telf. 51-54-237808 - Email: rectorado@unsa.edu.pe
+            Calle Universidad 107 Cercado - Arequipa<br>
+            
         </div>
         <div class="col-md-6 text-right style-secondfooter">
             Dirección Universitaria de Formación Académica<br>
             Email: dufa@unsa.edu.pe<br>
-             Telf. 51-54-282269
+            Telf.(054) 391911 
         </div>
       </div>  
       <!-- CREDITOS -->
