--- a/procedimientos/gestCertificaciones.html
+++ b/procedimientos/gestCertificaciones.html
@@ -289,9 +289,9 @@
                           <div class="col-12 col-lg-4 img-regl">
                             <div class="card" style="width: 18rem;">
                               <div class="card-body">
-                                <h5>REGLAMENTOS</h5>
-                                <p>Documento.pdf</p>
-                                <a href="#" class="card-link">Ver/Descargar</a>
+                                <h5>FORMATO</h5>
+                                <p>CONSTANCIA DE MATRICULA</p>
+                                <a href="../formatos/Formato 1 Constancia de Matricula.pdf" class="card-link" target="_blank">Ver/Descargar</a>
                               </div>
                             </div>
                             <div class="card" style="width: 18rem;">
@@ -314,14 +314,13 @@
         <!-- FOOTER -->
         <div class="row footer style-secondfooter">
             <div class="col-md-6 text-left">
-                Universidad Nacional de San Agustin de Arequipa <br>
-                Calle Santa Catalina Nro. 117. Cercado - Arequipa<br>
-                Telf. 51-54-237808 - Email: rectorado@unsa.edu.pe
+              Universidad Nacional de San Agustin de Arequipa <br>
+              Calle Universidad 107 Cercado - Arequipa<br>
             </div>
             <div class="col-md-6 text-right">
-                Dirección Universitaria de Formación Académica<br>
-                Email: dufa@unsa.edu.pe<br>
-                 Telf. 51-54-282269
+              Dirección Universitaria de Formación Académica<br>
+              Email: dufa@unsa.edu.pe<br>
+              Telf.(054) 391911 
             </div>
         </div>
         <!-- CREDITOS -->
