--- a/procedimientos/gestDocente.html
+++ b/procedimientos/gestDocente.html
@@ -114,9 +114,9 @@
                           <div class="col-12 col-lg-4 img-regl">
                             <div class="card" style="width: 18rem;">
                               <div class="card-body">
-                                <h5>REGLAMENTOS</h5>
-                                <p>Documento.pdf</p>
-                                <a href="#" class="card-link">Ver/Descargar</a>
+                                <h5>FORMATO</h5>
+                                <p>DATOS ACADÉMICOS DEL DOCENTE</p>
+                                <a href="../formatos/Formato 1 Docente.pdf" class="card-link" target="_blank">Ver/Descargar</a>
                               </div>
                             </div>
                             <div class="card" style="width: 18rem;">
@@ -228,16 +228,23 @@
                           <div class="col-12 col-lg-4 img-regl">
                             <div class="card" style="width: 18rem;">
                               <div class="card-body">
-                                <h5>REGLAMENTOS</h5>
-                                <p>Documento.pdf</p>
-                                <a href="#" class="card-link">Ver/Descargar</a>
+                                <h5>FORMATO</h5>
+                                <p>CRONOGRAMA DE VISITAS DE SUPERVISIÓN ORDINARIAS</p>
+                                <a href="../formatos/Formato 1 Cron Visitas.pdf" class="card-link" target="_blank">Ver/Descargar</a>
                               </div>
                             </div>
                             <div class="card" style="width: 18rem;">
                               <div class="card-body">
-                                <h5>REGLAMENTOS</h5>
-                                <p>Documento.pdf</p>
-                                <a href="#" class="card-link">Ver/Descargar</a>
+                                <h5>FORMATO</h5>
+                                <p>CONSTANCIA DE VISITA DE SUPERVISIÓN</p>
+                                <a href="../formatos/Formato 2 Cons Visita.pdf" class="card-link" target="_blank">Ver/Descargar</a>
+                              </div>
+                            </div>
+                            <div class="card" style="width: 18rem;">
+                              <div class="card-body">
+                                <h5>FORMATO</h5>
+                                <p>REPORTE DE VISITAS DE SUPERVISIÓN</p>
+                                <a href="../formatos/Formato 5 Reporte visitas.pdf" class="card-link" target="_blank">Ver/Descargar</a>
                               </div>
                             </div>
                           </div>
@@ -257,16 +264,16 @@
                           <div class="col-12 col-lg-4 img-regl">
                             <div class="card" style="width: 18rem;">
                               <div class="card-body">
-                                <h5>REGLAMENTOS</h5>
-                                <p>Documento.pdf</p>
-                                <a href="#" class="card-link">Ver/Descargar</a>
+                                <h5>FORMATO</h5>
+                                <p>ENCUESTA DE EVALUACIÓN DEL DESEMPEÑO DEL DOCENTE</p>
+                                <a href="../formatos/Formato 1 Encuesta.pdf" class="card-link" target="_blank">Ver/Descargar</a>
                               </div>
                             </div>
                             <div class="card" style="width: 18rem;">
                               <div class="card-body">
-                                <h5>REGLAMENTOS</h5>
-                                <p>Documento.pdf</p>
-                                <a href="#" class="card-link">Ver/Descargar</a>
+                                <h5>FORMATO</h5>
+                                <p>RESULTADOS DE LA ENCUESTA DE EVALUACIÓN AL DOCENTE </p>
+                                <a href="../formatos/Formato 2 Resul encuesta.pdf" class="card-link" target="_blank">Ver/Descargar</a>
                               </div>
                             </div>
                           </div>
@@ -282,16 +289,15 @@
         </div>
         <!-- FOOTER -->
         <div class="row footer style-secondfooter">
-            <div class="col-md-6 text-left">
-                Universidad Nacional de San Agustin de Arequipa <br>
-                Calle Santa Catalina Nro. 117. Cercado - Arequipa<br>
-                Telf. 51-54-237808 - Email: rectorado@unsa.edu.pe
-            </div>
-            <div class="col-md-6 text-right">
-                Dirección Universitaria de Formación Académica<br>
-                Email: dufa@unsa.edu.pe<br>
-                 Telf. 51-54-282269
-            </div>
+          <div class="col-md-6 text-left">
+            Universidad Nacional de San Agustin de Arequipa <br>
+            Calle Universidad 107 Cercado - Arequipa<br>
+          </div>
+          <div class="col-md-6 text-right">
+            Dirección Universitaria de Formación Académica<br>
+            Email: dufa@unsa.edu.pe<br>
+            Telf.(054) 391911 
+          </div>
         </div>
         <!-- CREDITOS -->
         <div class="row">
