--- a/procedimientos/gestRegistroNotas.html
+++ b/procedimientos/gestRegistroNotas.html
@@ -223,16 +223,15 @@
         </div>
         <!-- FOOTER -->
         <div class="row footer style-secondfooter">
-            <div class="col-md-6 text-left">
-                Universidad Nacional de San Agustin de Arequipa <br>
-                Calle Santa Catalina Nro. 117. Cercado - Arequipa<br>
-                Telf. 51-54-237808 - Email: rectorado@unsa.edu.pe
-            </div>
-            <div class="col-md-6 text-right">
-                Dirección Universitaria de Formación Académica<br>
-                Email: dufa@unsa.edu.pe<br>
-                 Telf. 51-54-282269
-            </div>
+          <div class="col-md-6 text-left">
+            Universidad Nacional de San Agustin de Arequipa <br>
+            Calle Universidad 107 Cercado - Arequipa<br>
+          </div>
+          <div class="col-md-6 text-right">
+            Dirección Universitaria de Formación Académica<br>
+            Email: dufa@unsa.edu.pe<br>
+            Telf.(054) 391911 
+          </div>
         </div>
         <!-- CREDITOS -->
         <div class="row">
