--- a/procedimientos/nosotros.html
+++ b/procedimientos/nosotros.html
@@ -213,9 +213,10 @@
               <h4>Política de Calidad</h4>
               <p>Desarrollar procesos de mejora continua orientados a la búsqueda de satisfacción total de nuestros usuarios.</p>
             </div>
-            <div class="col-12 text-center nosotros">
+            <div class="col-12 text-center nosotros mb-5">
               <h4>ORGANIGRAMA</h4>
-              <img src="../images/organigrama.png" class="img-fluid zoom mb-5" alt="organigrama">
+              <!-- <img src="../images/organigrama.png" class="img-fluid zoom mb-5" alt="organigrama"> -->
+              <iframe src="../formatos/organigrama.pdf" style="width:80%; height:500px;" frameborder="0"> </iframe>
             </div>
           </div>
   
@@ -225,14 +226,13 @@
       <!-- FOOTER -->
       <div class="row footer style-secondfooter">
         <div class="col-md-6 text-left">
-            Universidad Nacional de San Agustin de Arequipa <br>
-            Calle Santa Catalina Nro. 117. Cercado - Arequipa<br>
-            Telf. 51-54-237808 - Email: rectorado@unsa.edu.pe
+          Universidad Nacional de San Agustin de Arequipa <br>
+          Calle Universidad 107 Cercado - Arequipa<br>
         </div>
         <div class="col-md-6 text-right">
-            Dirección Universitaria de Formación Académica<br>
-            Email: dufa@unsa.edu.pe<br>
-             Telf. 51-54-282269
+          Dirección Universitaria de Formación Académica<br>
+          Email: dufa@unsa.edu.pe<br>
+          Telf.(054) 391911 
         </div>
     </div>
       <!-- CREDITOS -->
