--- a/index.html
+++ b/index.html
@@ -232,13 +232,15 @@
         <!-- COMUNICADO -->
         <div class="row">
           <div class="col-12">
-            <h3 class="title-section">COMUNICADO</h3>
+            <h3 class="title-section">COMUNICADOS</h3>
             <div class="row">
               <div class="col-12 col-md-6 col-lg-6" style="overflow:hidden;">
-                <img class="comunicado zoom" src="images/comunicado_1.png" alt="">
+                <img class="comunicado zoom"  height="290px" width="600px" src="images/comunicado_1.png" alt="">
               </div>
               <div class="col-12 col-md-6 col-lg-6" style="overflow:hidden;" >
-                <img class="comunicado zoom" src="images/comunicado_2.png" alt="">
+                <a href="https://www.unsa.edu.pe/ingresantes-a-la-unsa-deben-regularizar-expedientes/">
+                  <img class="comunicado zoom" src="images/FLYER-WEB.jpg" alt="">
+                </a>
               </div>
             </div>
           </div>
