--- a/index.html
+++ b/index.html
@@ -100,7 +100,9 @@
               <a class="nav-link dropdown-toggle my-menu active" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">INICIO</a>
               <div class="dropdown-menu gris01" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item gris02" href="#">Inicio</a>
-                <a class="dropdown-item gris02" href="procedimientos/nosotros.html">Nosotros</a>  
+                <a class="dropdown-item gris02" href="procedimientos/nosotros.html">Nosotros</a> 
+                <a class="dropdown-item gris02" href="procedimientos/documentos-academicos.html">Documentos académicos</a> 
+                <a class="dropdown-item gris02" href="procedimientos/cronograma-academico.html">Cronograma académico</a>
               </div>
             </li>
             <li class="nav-item my-menu-hover">
