--- a/procedimientos/cronograma-academico.html
+++ b/procedimientos/cronograma-academico.html
@@ -3,9 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap" rel="stylesheet"/>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap"rel="stylesheet">
-    <link rel="stylesheet"  href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous"/>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="../css/styles.css" />
     <title>CONSULTAS</title>
   </head>
@@ -88,46 +99,66 @@
       <div class="row">
         <div class="col px-0">
           <ul class="nav nav-justified color-menu">
-            <li class="nav-item nav-item dropdown my-menu-hover d-flex align-items-center justify-content-center">
-              <svg xmlns="http://www.w3.org/2000/svg" style="fill: #92585a;" width="24" height="24" viewBox="0 0 24 24"><path d="M21.743,12.331l-9-10c-0.379-0.422-1.107-0.422-1.486,0l-9,10c-0.265,0.293-0.331,0.715-0.17,1.076	C2.247,13.768,2.605,14,3,14h2v7c0,0.552,0.447,1,1,1h3c0.553,0,1-0.448,1-1v-4h4v4c0,0.552,0.447,1,1,1h3c0.553,0,1-0.448,1-1v-7h2	c0.395,0,0.753-0.232,0.913-0.593C22.074,13.046,22.008,12.625,21.743,12.331z"/></svg>
-              <a class="nav-link dropdown-toggle my-menu active" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">INICIO</a>
-              <div class="dropdown-menu gris01" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item gris02" href="../index.html">Inicio</a>
-                <a class="dropdown-item gris02" href="nosotros.html">Nosotros</a>
-                <a class="dropdown-item gris02" href="documentos-academicos.html">Documentos académicos</a> 
-                <a class="dropdown-item gris02" href="cronograma-academico.html">Cronograma académico</a>  
-              </div>
-            </li>
-            <li class="nav-item my-menu-hover">
-              <a class="nav-link my-menu" href="gestDocente.html">Gestión<br/>Docente</a>
-            </li>
-            <li class="nav-item my-menu-hover">
+            <li
+              class="nav-item nav-item dropdown my-menu-hover d-flex align-items-center justify-content-center"
+            >
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                style="fill: #92585a;"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+              >
+                <path
+                  d="M21.743,12.331l-9-10c-0.379-0.422-1.107-0.422-1.486,0l-9,10c-0.265,0.293-0.331,0.715-0.17,1.076	C2.247,13.768,2.605,14,3,14h2v7c0,0.552,0.447,1,1,1h3c0.553,0,1-0.448,1-1v-4h4v4c0,0.552,0.447,1,1,1h3c0.553,0,1-0.448,1-1v-7h2	c0.395,0,0.753-0.232,0.913-0.593C22.074,13.046,22.008,12.625,21.743,12.331z"
+                />
+              </svg>
               <a
-                class="nav-link my-menu"
-                href="gestCurricular.html"
-                >Gestión <br/>Curricular
+                class="nav-link dropdown-toggle my-menu active"
+                role="button"
+                data-toggle="dropdown"
+                aria-haspopup="true"
+                aria-expanded="false"
+                href="#"
+                >INICIO</a
+              >
+              <div
+                class="dropdown-menu gris01"
+                aria-labelledby="navbarDropdown"
+              >
+                <a class="dropdown-item gris02" href="../index.html">Inicio</a>
+                <a class="dropdown-item gris02" href="nosotros.html"
+                  >Nosotros</a>
+
+                  <a class="dropdown-item gris02" href="procedimientos/documentos-academicos.html">Documentos académicos</a> 
+                  <a class="dropdown-item gris02" href="#">Cronograma académico</a>
+              </div>
+
+            </li>
+            <li class="nav-item my-menu-hover">
+              <a class="nav-link my-menu" href="gestDocente.html"
+                >Gestión<br />Docente</a
+              >
+            </li>
+            <li class="nav-item my-menu-hover">
+              <a class="nav-link my-menu" href="gestCurricular.html"
+                >Gestión <br />Curricular
               </a>
             </li>
             <li class="nav-item my-menu-hover">
-              <a
-                class="nav-link my-menu"
-                href="GestMatricula.html"
+              <a class="nav-link my-menu" href="GestMatricula.html"
                 >Gestión <br />
                 Matrícula</a
               >
             </li>
             <li class="nav-item my-menu-hover">
-              <a
-                class="nav-link my-menu"
-                href="gestRegistroNotas.html"
+              <a class="nav-link my-menu" href="gestRegistroNotas.html"
                 >Gestión <br />
                 Registro de notas</a
               >
             </li>
             <li class="nav-item my-menu-hover">
-              <a
-                class="nav-link my-menu"
-                href="gestCertificaciones.html"
+              <a class="nav-link my-menu" href="gestCertificaciones.html"
                 >Gestión <br />
                 Cerfificaciones</a
               >
@@ -148,7 +179,7 @@
                 class="dropdown-menu gris01"
                 aria-labelledby="navbarDropdown"
               >
-                <a class="dropdown-item gris02" href="#"
+                <a class="dropdown-item gris02" href="consultas.html"
                   >Preguntas Frecuentes</a
                 >
               </div>
@@ -158,69 +189,54 @@
       </div>
       <!-- MAIN- PREGUNTAS -->
       <div class="principal">
-        <h2 class="title-section" >PREGUNTAS FRECUENTES</h2>
-        <ul class="row" id="preg-frec">
-            <li>
-                <h3 class="col-12">¿Cuánto tiempo está vigente el pago de no adeudar bienes o material bibliográfico de la universidad?</h3>
-                <div class="col-12">
-                    <p>
-                        La evaluación será tomada en forma virtual el domingo 12 de julio, en el caso de aquellos postulantes que postulan a Medicina, Enfermería, Arquitectura y Artes previamente rendirán la Evaluación de Perfil Vocacional el domingo 5 de julio.<br>
-                        El horario será dado a conocer a través de su nuevo correo electrónico institucional que se le generará luego de aceptar la evaluación virtual.
-                    </p>
-                </div>
-            </li>
-            <li>
-                <h3 class="col-12">¿Dónde debo realizar los pagos de los tramites o constancias?</h3>
-                <div class="col-12">
-                    <p>El Reglamento de Admisión de la UNSA, NO permite realizar cambios de carrera.</p>
-                </div>
-            </li>
-            <li>
-                <h3 class="col-12">¿Dónde encuentro los formatos de solicitud para realizar un tramite?</h3>
-                <div class="col-12">
-                    <p>Si le quedó pendiente la confirmación de inscripción, podrá hacerlo entre el 23 al 28 de junio, siendo prioridad si usted postula a Medicina, Enfermería, Arquitectura o Artes</p>
-                </div>
-            </li>
-            <li>
-                <h3 class="col-12">¿Qué pasa si no recojo mi carné universitario en el plazo indicado, a donde debo ir? </h3>
-                <div class="col-12">
-                    <p>Cuando usted suba la declaración jurada de que si rendirá el examen virtual, tendrá que confirmar y validar un correo electrónico de contacto, es el momento en el que puede usar un correo electrónico nuevo, sin embargo posterior a ello tendrá que usar el correo electrónico institucional que le será brindado.</p>
-                 </div>
-            </li>
-            <li>
-              <h3 class="col-12">¿Cuál es el costo de los trámites académicos?</h3>
-              <div class="col-12">
-                  <p>Cuando usted suba la declaración jurada de que si rendirá el examen virtual, tendrá que confirmar y validar un correo electrónico de contacto, es el momento en el que puede usar un correo electrónico nuevo, sin embargo posterior a ello tendrá que usar el correo electrónico institucional que le será brindado.</p>
-               </div>
-            </li>
-            <li>
-              <h3 class="col-12">¿Cuánto tiempo demora un trámite solicitado?</h3>
-              <div class="col-12">
-                  <p>Cuando usted suba la declaración jurada de que si rendirá el examen virtual, tendrá que confirmar y validar un correo electrónico de contacto, es el momento en el que puede usar un correo electrónico nuevo, sin embargo posterior a ello tendrá que usar el correo electrónico institucional que le será brindado.</p>
-               </div>
-            </li>
-            <li>
-              <h3 class="col-12">¿Dónde se encuentra la oficina de DUFA?</h3>
-              <div class="col-12">
-                  <p>Cuando usted suba la declaración jurada de que si rendirá el examen virtual, tendrá que confirmar y validar un correo electrónico de contacto, es el momento en el que puede usar un correo electrónico nuevo, sin embargo posterior a ello tendrá que usar el correo electrónico institucional que le será brindado.</p>
-               </div>
-            </li>
-        </ul>
+        <div class="row">
+          <div class="col-12 img-wid">
+            <img
+              src="../images/banner2.jpg"
+              class="img-fluid banner"
+              alt="Responsive image"
+            />
+          </div>
+        </div>
+        <h2 class="title-section">Cronograma de Actividades Académicas 2020</h2>
+        <div class="row justify-content-center" style="margin: 15px -15px 15px -15px;">
+          <div class="col-md-8 text-justify">
+            <p>
+              <embed
+                src="https://www.unsa.edu.pe/transparencia/docs/Resolucion%20C.U.%200954-2019.pdf#page=2"
+                type="application/pdf"
+                width="100%"
+                height="1000px"
+              />
+            </p>
+            <br />
+            <div>
+              <iframe
+                src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2FPaginaOficialUNSA%2F&amp;width=181&amp;layout=button_count&amp;action=like&amp;size=small&amp;show_faces=true&amp;share=true&amp;height=46&amp;appId"
+                width="181"
+                height="46"
+                style="border: none; overflow: hidden;"
+                scrolling="no"
+                frameborder="0"
+                allowtransparency="true"
+              ></iframe>
+            </div>
+          </div>
+        </div>
       </div>
 
       <!-- FOOTER -->
-      <div class="row footer ">
+      <div class="row footer">
         <div class="col-md-6 text-left style-secondfooter">
-            Universidad Nacional de San Agustin de Arequipa <br>
-            Calle Universidad 107 Cercado - Arequipa<br>
-            
+          Universidad Nacional de San Agustin de Arequipa <br />
+          Calle Universidad 107 Cercado - Arequipa<br />
         </div>
         <div class="col-md-6 text-right style-secondfooter">
-            Dirección Universitaria de Formación Académica<br>
-            Email: dufa@unsa.edu.pe<br>
-            Telf.(054) 391911 
+          Dirección Universitaria de Formación Académica<br />
+          Email: dufa@unsa.edu.pe<br />
+          Telf.(054) 391911
         </div>
-      </div>  
+      </div>
       <!-- CREDITOS -->
       <div class="row">
         <div class="col-md-12 text-right creditos">
