--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
           <p>
             <img src="images/direccion.png" alt="" />
             <span class="fnt-peq">DIRECCIÓN</span><br />
-            Calle Universidad n° 107 Cercado Arequipa
+            Calle Universidad N° 107 Cercado Arequipa
           </p>
           <p>
             <img src="images/phone.png" alt="" />
@@ -295,12 +295,12 @@
           </p>
           <p>
             <img src="images/website.png" alt="" />
-            <span class="fnt-peq">Web Site</span><br />
+            <span class="fnt-peq">SITIO WEB</span><br />
               http://unsa.edu.pe/dufa
           </p>
           <p>
             <img src="images/email.png" alt="" />
-            <span class="fnt-peq">Correo electrónico:</span><br />
+            <span class="fnt-peq">CORREO ELECTRÓNICO</span><br />
             dufa@unsa.edu.pe
           </p>
         </div>
