--- a/procedimientos/gestRegistroNotas.html
+++ b/procedimientos/gestRegistroNotas.html
@@ -174,7 +174,7 @@
                         </div>
                         <div class="row my-2 style-pill">
                           <div class="col-12 col-lg-8 img-regl">
-                            <img id="#gestionDocente" class="gd-img" src="../images/Nueva carpeta/4.1 Registro de notas.jpg" alt="">
+                            <img id=" "   class="gd-img" src="../images/Nueva carpeta/4.1 Registro de notas.jpg" alt="">
                             
                           </div>
                           <!-- REGLAMENTOS -->
@@ -197,7 +197,7 @@
                         </div>
                         <div class="row my-2 style-pill">
                           <div class="col-12 col-lg-8 img-regl">
-                            <img id="#gestionDocente" class="gd-img" src="../images/Nueva carpeta/4.2 Tramite de examen rezagado.jpg" alt="">
+                            <img id=" "   class="gd-img" src="../images/Nueva carpeta/4.2 Tramite de examen rezagado.jpg" alt="">
                           </div>
                           <!-- REGLAMENTOS -->
                           <div class="col-12 col-lg-4 img-regl">
@@ -219,7 +219,7 @@
                         </div>
                         <div class="row my-2 style-pill">
                           <div class="col-12 col-lg-8 img-regl">
-                            <img id="#gestionDocente" class="gd-img" src="../images/Nueva carpeta/4.3 Modificación de notas.jpg" alt="">
+                            <img id=" "   class="gd-img" src="../images/Nueva carpeta/4.3 Modificación de notas.jpg" alt="">
                             
                           </div>
                           <!-- REGLAMENTOS -->
