--- a/procedimientos/nosotros.html
+++ b/procedimientos/nosotros.html
@@ -212,7 +212,7 @@
               <div class="wd-men-pag menu-nosotros">
                 <h2>Nosotros</h2>
                 <ul class="list-unstyled grisb01 img-rounded fnt-10"><li id="menu-item-621" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-621"><a href="#resena-historica">Reseña Histórica</a></li>
-                  <li id="menu-item-514" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-514"><a href="./organizacion.html">Organización</a></li>
+                  <li id="menu-item-514" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-514"><a href="./organizacion">Organización</a></li>
                     <li id="menu-item-619" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-619"><a href="#mision">Misión</a></li>
                     <li id="menu-item-618" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-618"><a href="#vision">Visión</a></li>
                     <li id="menu-item-622" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-622"><a href="#politica-calidad">Política de Calidad</a></li>
